# dexcap-sdk-cpp

./: README.md
conf/: config.yaml  env_setup.sh
docs/: CPP-API-Reference.md
examples/: CMakeLists.txt  c_example.c  example.cpp  example_defs.h  example_imu.cpp
include/: configuration.h  dexcap.h  exoskeleton.h  typedef.h
include/cpp/: DexCap.hpp  TypeDef.hpp  Utils.hpp
libs/linux/: example_imu
libs/linux/aarch64/: libudev.so.1.7.2
libs/linux/x86_64/: libyaml-cpp.so.0.7.0
libs/windows/: DexCap.lib  yaml-cpp.lib  yaml-cppd.lib
urdf/DexCap_v3/: CMakeLists.txt  package.xml
urdf/DexCap_v3/config/: joint_names_DexCap_v3.yaml
urdf/DexCap_v3/launch/: display.launch  gazebo.launch
urdf/DexCap_v3/meshes/: arm_left_link_1.STL  arm_left_link_2.STL  arm_left_link_3.STL  arm_left_link_4.STL  arm_left_link_5.STL  arm_left_link_6.STL  arm_left_link_7.STL  arm_left_link_8.STL  arm_left_link_9.STL  arm_right_link_1.STL  arm_right_link_2.STL  arm_right_link_3.STL  arm_right_link_4.STL  arm_right_link_5.STL  arm_right_link_6.STL  arm_right_link_7.STL  arm_right_link_8.STL  arm_right_link_9.STL  base_link.STL  waist_link_1.STL  waist_link_2.STL  waist_link_3.STL  waist_link_4.STL  waist_link_5.STL
urdf/DexCap_v3/urdf/: DexCap_v3.csv  DexCap_v3.urdf
urdf/DexGlove_L_v3/: CMakeLists.txt  package.xml
urdf/DexGlove_L_v3/config/: joint_names_DexGlove_L_v3.yaml
urdf/DexGlove_L_v3/launch/: display.launch  gazebo.launch
urdf/DexGlove_L_v3/meshes/: base_link.STL  glove_link_l_1_1.STL  glove_link_l_1_2.STL  glove_link_l_1_3.STL  glove_link_l_1_4.STL  glove_link_l_1_5.STL  glove_link_l_2_1.STL  glove_link_l_2_2.STL  glove_link_l_2_3.STL  glove_link_l_2_4.STL  glove_link_l_3_1.STL  glove_link_l_3_2.STL  glove_link_l_3_3.STL  glove_link_l_3_4.STL  glove_link_l_4_1.STL  glove_link_l_4_2.STL  glove_link_l_4_3.STL  glove_link_l_4_4.STL  glove_link_l_5_1.STL  glove_link_l_5_2.STL  glove_link_l_5_3.STL  glove_link_l_5_4.STL
urdf/DexGlove_L_v3/urdf/: DexGlove_L_v3.csv  DexGlove_L_v3.urdf
urdf/DexGlove_R_v3/: CMakeLists.txt  package.xml
urdf/DexGlove_R_v3/config/: joint_names_DexGlove_R_v3.yaml
urdf/DexGlove_R_v3/launch/: display.launch  gazebo.launch
urdf/DexGlove_R_v3/meshes/: base_link.STL  glove_link_r_1_1.STL  glove_link_r_1_2.STL  glove_link_r_1_3.STL  glove_link_r_1_4.STL  glove_link_r_1_5.STL  glove_link_r_2_1.STL  glove_link_r_2_2.STL  glove_link_r_2_3.STL  glove_link_r_2_4.STL  glove_link_r_3_1.STL  glove_link_r_3_2.STL  glove_link_r_3_3.STL  glove_link_r_3_4.STL  glove_link_r_4_1.STL  glove_link_r_4_2.STL  glove_link_r_4_3.STL  glove_link_r_4_4.STL  glove_link_r_5_1.STL  glove_link_r_5_2.STL  glove_link_r_5_3.STL  glove_link_r_5_4.STL
urdf/DexGlove_R_v3/urdf/: DexGlove_R_v3.csv  DexGlove_R_v3.urdf
